frontend: Cleaning and editing sentence language

--- a/frontend/src/assets/languages/english.json
+++ b/frontend/src/assets/languages/english.json
@@ -51,6 +51,7 @@
       "experts": "experts",
       "new users": "new users",
       "Novice": "Novice",
+      "Active Appointments And Chats": "Active Appointments And Chats",
       "Fields Users": "Fields Users",
       "adminstrator": "adminstrator",
       "Appointment is getting Removed": "Appointment is getting Removed",
