--- a/frontend/src/assets/languages/french.json
+++ b/frontend/src/assets/languages/french.json
@@ -35,6 +35,7 @@
       "Messages": "Messages",
       "Sign Up": "S'inscrire",
       "Profile/Settings": "Profil/Réglages",
+      "Active Appointments And Chats": "Rendez-vous et chats actifs",
       "Cancel": "Annuler",
       "Submit": "Soumettre",
       "Logout": "Se déconnecter",
