frontend/src/assets/languages: Replacing words between french.json and english,json

--- a/frontend/src/assets/languages/french.json
+++ b/frontend/src/assets/languages/french.json
@@ -43,6 +43,8 @@
       "Appointments": "Rendez-vous",
       "Edit Profile": "Editer le profil",
       "Banned Users": "Utilisateurs bannis",
+      "ban user": "utilisateur banni",
+      "unban user": "utilisateur cubain",
       "Book": "Reserver", 
       "My Chats": "Mes Chats",
       "My Appointments": "Mes rendez-vous",
