--- a/frontend/src/assets/languages/english.json
+++ b/frontend/src/assets/languages/english.json
@@ -80,8 +80,8 @@
       "MESSAGE": "MESSAGE",
       "BLOCK": "BLOCK",
       "ADD REVIEW": "ADD REVIEW",
-      "Ban/UnBan User": "Bannir/Débannir Un Utilisateur",
-      "BAN USER": "UTILISATEUR BANNI",
-      "UNBAN USER": "UNBAN UTILISATEUR"
+      "Ban/UnBan User": "BAN/UNBAN USER",
+      "BAN USER": "BAN USER",
+      "UNBAN USER": "UNBAN USER"
   }
 }
