frontend/src/assets/languages/english.json: Adding fields and specialties titles

--- a/frontend/src/assets/languages/english.json
+++ b/frontend/src/assets/languages/english.json
@@ -82,6 +82,32 @@
       "ADD REVIEW": "ADD REVIEW",
       "Ban/UnBan User": "BAN/UNBAN USER",
       "BAN USER": "BAN USER",
-      "UNBAN USER": "UNBAN USER"
+      "UNBAN USER": "UNBAN USER",
+      "Agriculture, Food and Natural Resources" :"Agriculture, Food and Natural Resources",
+      "Architecture and Construction": "Architecture and Construction",
+      "Arts, Audio/Video Technology": "Arts, Audio/Video Technology",
+      "Business and Finance":"Business and Finance",
+      "Community and Social Services":"Community and Social Services",
+      "Education and Training":"Education and Training",
+      "Farming, Fishing, and Forestry":"Farming, Fishing, and Forestry",
+      "Food Preparation and Serving Related":"Food Preparation and Serving Related",
+      "Government and Public Adminstration":"Government and Public Adminstration" ,
+      "Health Science": "Health Science",
+      "Information Technology":"Information Technology",
+      "Law, Public Safety, Corrections, and Security": "Law, Public Safety, Corrections, and Security",
+      "Sales and Marketing": "Sales and Marketing",
+      "Military": "Military",
+      "Office and Administrative": "Office and Administrative",
+      "Science, Technology, Engineering, and Math": "Science, Technology, Engineering, and Math",
+      "Sports and Entertainment": "Sports and Entertainment",
+      "Software developer": "Software developer",
+      "Information technology/software trainers":"Information technology/software trainers",
+      "Web designer": "Web designer",
+      "Web developer": "Web developer",
+      "UX designer" :"UX designer",
+      "Video game designer": "Video game designer",
+      "Video game developer": "Video game developer",
+      "Data scientist": "Data scientist",
+      "Database administrator": "Database administrator"
   }
 }
