frontend/src/assets/languages/french.json: Adding fields and specialties titles (french translation)

--- a/frontend/src/assets/languages/french.json
+++ b/frontend/src/assets/languages/french.json
@@ -80,7 +80,33 @@
       "BOOK": "RESERVER",
       "MESSAGE": "MESSAGE",
       "BLOCK": "BLOQUER",
-      "ADD REVIEW": "AJOUTER UN COMMENTAIRE"
+      "ADD REVIEW": "AJOUTER UN COMMENTAIRE",
+      "Agriculture, Food and Natural Resources" :"Agriculture, alimentation et ressources naturelles",
+      "Architecture and Construction": "Architecture et bâtiment",
+      "Arts, Audio/Video Technology": "Arts, Technologie audio/vidéo",
+      "Business and Finance":"Affaires et finances",
+      "Community and Social Services":"Services communautaires et sociaux",
+      "Education and Training":"Éducation et formation",
+      "Farming, Fishing, and Forestry":"Farming, Fishing, and Forestry",
+      "Food Preparation and Serving Related":"Agriculture, pêche et foresterie",
+      "Government and Public Adminstration":"Gouvernement et administration publique" ,
+      "Health Science": "Sciences de la santé",
+      "Information Technology":"Informatique",
+      "Law, Public Safety, Corrections, and Security": "Droit, sécurité publique, services correctionnels et sécurité",
+      "Sales and Marketing": "Ventes et marketing",
+      "Military": "Militaire",
+      "Office and Administrative": "Bureau et Administratif",
+      "Science, Technology, Engineering, and Math": "Sciences, technologie, ingénierie et mathématiques",
+      "Sports and Entertainment": "Sports et divertissement",
+      "Software developer": "Développeur de logiciels",
+      "Information technology/software trainers":"Formateurs en technologies de l'information/logiciels",
+      "Web designer": "Web designer",
+      "Web developer": "développeur web",
+      "UX designer" :"Concepteur de UX",
+      "Video game designer": "Concepteur de jeux vidéos",
+      "Video game developer": "Développeur de jeux vidéo",
+      "Data scientist": "Scientifique des données",
+      "Database administrator": "Administrateur de base de données"
 }
   }
 
